--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="navigation">
   <div class="nav-menu">
   <div id="logo" class="logo">
-    <img src="./images/logo2.gif">
+    <img src="images/logo2.gif">
   </div>
   <div class="contact-info" ><i class="fas fa-phone-alt">&nbsp;&nbsp;502-555-6666</i></div>
   </div>
